# cernvm-launch

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Changelog  README.md  development.md  prepare-linux32.sh  prepare-linux64.sh  prepare-osx.sh  prepare-vs2013-vt120_xp.bat  technical_overview.md
ci/: README.md  build.py  params.conf  prepare-linux64.sh  prepare-osx.sh  prepare-vs-vt140.bat  prepare-vs2013-vt120_xp.bat  run_inside_vm.py  test.py  test_running.py  userData.conf
ci/tests/: create_and_destroy_machine.ini  no_params.ini  params.conf  print_help.ini  userData.conf
include/: RequestHandler.h  Tools.h
src/: RequestHandler.cpp  Tools.cpp  main.cpp
src/platform/osx/: Info.plist
